<resources>
    <string name="app_name">IoT_Terminal</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="OverviewButtonText">系统概览</string>
    <string name="SerialButtonText">传感器配置</string>
    <string name="InternetButtonText">互联网配置</string>
    <string name="DrawButtonText">历史数据</string>
    <string name="RealtimeDrawButtonText">实时数据</string>
    <string name="SettingsButtonText">设置</string>

    <string name="Overview_SensorStatus_Title">传感网状态</string>
    <string name="Overview_InternetStatus_Title">互联网状态</string>
    <string name="Overview_InternetConnectionStatus_Title">链接状态：</string>
    <string name="Overview_InternetConnectionLasttime_Title">上次链接时间：</string>

    <string name="SensorStatus_AllDisconnected">所有传感器断开</string>
    <string name="SensorStatus_PartDisconnected">部分传感器断开</string>
    <string name="SensorStatus_AllConnected">所有传感器正常</string>
    <string name="InternetStatus_Connected">互联网连接正常</string>
    <string name="InternetStatus_Disconnected">互联网连接断开</string>
    <string name="InternetConnection_failed">无法连接至服务器</string>
    <string name="InternetConnection_succeed">已连接至服务器</string>

    <string name="Serial_serialarea_Title">传感器列表</string>
    <string name="Serial_flushbutton_Text">刷新列表</string>
    <string name="Serial_addbutton_Text">增加传感器</string>
    <string name="Serial_deletebutton_Text">删除传感器</string>
    <string name="Serial_editbutton_Text">编辑传感器</string>
    <string name="Serial_edit_ID_title">传感器  ID</string>
    <string name="Serial_edit_type_title">传感器类型</string>
    <string name="Serial_edit_addr_title">传感器LoRa地址</string>.

    <string name="Internet_Title">互联网配置界面</string>
    <string name="Internet_edit_IP_title">本机IP：</string>
    <string name="Internet_edit_Netmask_title">子网掩码：</string>
    <string name="Internet_edit_Gateway_title">网关IP：</string>
    <string name="Internet_edit_autoconfig_switch">自动配置网络</string>
    <string name="Internet_edit_server_title">服务器：</string>
    <string name="Internet_edit_serverport_title">服务器端口：</string>
    <string name="Internet_status_title">网络状态</string>
    <string name="Internet_status_link_title">服务器链接状态：</string>
    <string name="Internet_status_lasttime_title">上次链接时间：</string>
    <string name="Internet_edit_button_title">保存修改</string>
    <string name="Internet_status_reflush_button_title">刷新</string>

    <string name="Settings_serial_query_title">启动传感器数据收集</string>

    <string name="title_activity_test">test</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LogoActivity_ImageContentDescription">LOGO</string>
    <string name="SettingsFragment_InternetFragment_Serveraddr_Title">服务器地址：</string>
    <string name="SettingsFragment_InternetFragment_Serveraddr_Hint">服务器地址</string>
    <string name="SettingsFragment_InternetFragment_Serverdataport_title">服务器数据端口：</string>
    <string name="SettingsFragment_InternetFragment_Serverdataport_hint">服务器数据端口</string>
    <string name="SettingsFragment_InternetFragment_ServerXMLport_title">服务器文件端口：</string>
    <string name="SettingsFragment_InternetFragment_ServerXMLport_Hint">服务器文件端口</string>
    <string name="OverviewFragment_Sensorstatus_Title">传感器连接：</string>
    <string name="OverviewFragment_Sensorstatus_leftTitle">[已连接/总数]</string>
    <string name="OverviewFragment_InternetStatus_Title">互联网连接：</string>
    <string name="OverviewFragment_Log_Hint">log</string>
    <string name="OverviewFragment_SensorGuidanceButton_Title">传感器</string>
    <string name="OverviewFragment_DataGuidanceButton_Title">数据</string>
    <string name="OverviewFragment_SettingsGuidanceButton_Title">设置</string>
    <string name="OverviewFragment_AdvanceGuidanceButton_Title">高级</string>
    <string name="SensorInfoFragment_Title">传感器信息</string>
    <string name="SensorInfoFragment_ID_Title">传感器ID：</string>
    <string name="SensorInfoFragment_Type_Title">传感器类型：</string>
    <string name="SensorInfoFragment_Loraaddr_Title">LoRa地址</string>
    <string name="SensorInfoFragment_Enable_Title">传感器启用</string>
    <string name="SensorInfoFragment_RealtimeSwitch_title">实时数据</string>
    <string name="AdvanceFragment_Backbutton_Title">返回</string>
    <string name="AdvanceFragment_Title">高级</string>
    <string name="AdvanceFragment_PackageManager_Button">传感器类型缓存管理</string>
    <string name="AdvanceSensorTypeFragment_List_Name_Title">名称</string>
    <string name="AdvanceSensorTypeFragment_List_LocalVersion_Title">本地版本</string>
    <string name="AdvanceSensorTypeFragment_List_RemoteVersion_Title">远端版本</string>
    <string name="AdvanceSensorTypeFragment_AddButton">增加</string>
    <string name="AdvanceSensorTypeFragment_UpdateButton">更新</string>
    <string name="AdvanceSensorTypeFragment_DeleteButton">删除</string>
    <string name="DataFragment_BackButton">返回</string>
    <string name="DataFragment_List_Title">参数列表</string>
    <string name="DataFragment_Chart_Title">数据图表</string>
    <string name="DataDetailedFragment_Switch_Title">实时数据</string>
    <string name="SensorFragment_BackButton">返回</string>
    <string name="SensorFragment_List_Title">传感器列表</string>
    <string name="SensorFragment_List_ID_Title">编号</string>
    <string name="SensorFragment_List_Type_Title">类型</string>
    <string name="SensorFragment_List_Connection_Title">连接状态</string>
    <string name="SensorFragment_Addbutton">添加</string>
    <string name="SensorFragment_DeleteButton">删除</string>
    <string name="SensorAddFragment_Title">添加传感器</string>
    <string name="SensorAddFragment_Type_Title">传感器类型</string>
    <string name="SensorAddFragment_Loraaddr_title">LoRa地址</string>
    <string name="SensorAddFragment_Loraaddr_hint">LoRa地址</string>
    <string name="SensorAddFragment_Addbutton">添加</string>
    <string name="SettingsFragment_Backbutton">返回</string>
    <string name="SettingsFragment_Title">设置</string>
    <string name="SettingsFragment_InternetSettings_Button">互联网设置</string>


</resources>
