<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/SettingsFragment_InternetFragment_Serveraddr_Title"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/Settings_Internet_ServerAddr_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/SettingsFragment_InternetFragment_Serveraddr_Hint"
                android:inputType="textPersonName"
                android:textSize="35sp"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/SettingsFragment_InternetFragment_Serverdataport_title"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/Settings_Internet_ModbusPort_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/SettingsFragment_InternetFragment_Serverdataport_hint"
                android:inputType="number"
                android:textSize="35sp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/SettingsFragment_InternetFragment_ServerXMLport_title"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/Settings_Internet_XMLPort_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/SettingsFragment_InternetFragment_ServerXMLport_Hint"
                android:inputType="number"
                android:textSize="35sp"
                android:importantForAutofill="no" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>