<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SensorAddFragment_Title"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/SensorAddFragment_Type_Title"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <Spinner
                android:id="@+id/SensorAdd_TypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/SensorAddFragment_Loraaddr_title"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/SensorAdd_LoraAddrEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/SensorAddFragment_Loraaddr_hint"
                android:textSize="35sp" />

        </LinearLayout>

        <Button
            android:id="@+id/SensorAdd_ConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/SensorAddFragment_Addbutton"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>